--- a/AIFoodApp/app/build.gradle
+++ b/AIFoodApp/app/build.gradle
@@ -25,6 +25,17 @@ android {
         sourceCompatibility JavaVersion.VERSION_15
         targetCompatibility JavaVersion.VERSION_15
     }
+    sourceSets {
+        main {
+            res {
+                srcDirs =
+                        [
+                                'src\\main\\res\\common',
+                                'src\\main\\res\\main'
+                        ]
+            }
+        }
+    }
 }
 
 dependencies {
