앱 첫 화면 로그인 페이지 UI 디자인

--- a/AIFoodApp/app/build.gradle
+++ b/AIFoodApp/app/build.gradle
@@ -31,7 +31,8 @@ android {
                 srcDirs =
                         [
                                 'src\\main\\res\\common',
-                                'src\\main\\res\\main'
+                                'src\\main\\res\\main',
+                                'src\\main\\res\\login'
                         ]
             }
         }
