--- a/AIFoodApp/app/build.gradle
+++ b/AIFoodApp/app/build.gradle
@@ -25,6 +25,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_15
         targetCompatibility JavaVersion.VERSION_15
     }
+
     sourceSets {
         main {
             res {
@@ -40,11 +41,16 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation "com.kakao.sdk:v2-user:2.9.0" // 카카오 로그인
+    /*implementation "com.kakao.sdk:v2-talk:2.9.0" // 친구, 메시지(카카오톡)
+    implementation "com.kakao.sdk:v2-story:2.9.0" // 카카오스토리
+    implementation "com.kakao.sdk:v2-link:2.9.0" // 메시지(카카오링크)
+    implementation "com.kakao.sdk:v2-navi:2.9.0" // 카카오내비*/
 }
