--- a/AIFoodApp/app/src/main/AndroidManifest.xml
+++ b/AIFoodApp/app/src/main/AndroidManifest.xml
@@ -2,13 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.aifoodapp">
 
+    <!-- 인터넷 사용 권한 설정 (카카오 서버와 통신하기 위하여)-->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AIFoodApp">
+        android:theme="@style/Theme.AIFoodApp"
+        android:name=".KakaoApplication">
         <activity
             android:name=".activity.MainActivity"
             android:exported="false" />
