google login draft

--- a/AIFoodApp/app/build.gradle
+++ b/AIFoodApp/app/build.gradle
@@ -53,4 +53,11 @@ dependencies {
     implementation "com.kakao.sdk:v2-story:2.9.0" // 카카오스토리
     implementation "com.kakao.sdk:v2-link:2.9.0" // 메시지(카카오링크)
     implementation "com.kakao.sdk:v2-navi:2.9.0" // 카카오내비*/
+
+    //glade 추가 (이미지 로드)
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+
+    //google login
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
 }
