음식 상세정보 ui생성

--- a/AIFoodApp/app/src/main/AndroidManifest.xml
+++ b/AIFoodApp/app/src/main/AndroidManifest.xml
@@ -46,6 +46,8 @@
             android:exported="false"/>
         <activity android:name=".activity.FoodAnalysisActivity"
             android:exported="false"/>
+        <activity android:name=".activity.FoodDetailInfoActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
