밸런스 그래프, 프로그레스바 권장량 초과 시 처리 로직 추가, 영문 표기 오류 수정

--- a/AIFoodApp/app/build.gradle
+++ b/AIFoodApp/app/build.gradle
@@ -60,4 +60,7 @@ dependencies {
 
     //google login
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
+    //MPAndroidChart_ About radarchart's radar map
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
