--- a/AIFoodApp/build.gradle
+++ b/AIFoodApp/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         mavenCentral()
         jcenter()
         maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/'}  //kakao sdk 레지스토리 설정
+        maven { url 'https://jitpack.io'}
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
