--- a/AIFoodApp/app/src/main/AndroidManifest.xml
+++ b/AIFoodApp/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_replace_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AIFoodApp">
+        android:theme="@style/Theme.AIFoodApp"
+        android:usesCleartextTraffic="true">
+    <!-- http 접근을 허용 -->
+
         <activity
             android:name=".activity.InitialSurveyActivity"
             android:exported="false" />
