레트로핏, 객체 추가(삭제할수도)

--- a/AIFoodApp/app/build.gradle
+++ b/AIFoodApp/app/build.gradle
@@ -63,4 +63,10 @@ dependencies {
 
     //MPAndroidChart_ About radarchart's radar map
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson'
+    //gson은 json을 자바 클래스로 바꿔
+
 }
