--- a/AIFoodApp/app/build.gradle
+++ b/AIFoodApp/app/build.gradle
@@ -63,4 +63,9 @@ dependencies {
 
     //MPAndroidChart_ About radarchart's radar map
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 }
