--- a/AIFoodApp/app/src/main/AndroidManifest.xml
+++ b/AIFoodApp/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.android.aifoodapp">
     <!-- 인터넷 사용 권한 설정 (카카오 서버와 통신하기 위하여) -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 스마트폰 메모리 접근 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".KakaoApplication"
@@ -14,8 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AIFoodApp"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".activity.RequestUserInfo"
+            android:exported="true" />
         <!-- http 접근을 허용 -->
-
         <activity
             android:name=".activity.InitialSurveyActivity"
             android:exported="false" />
@@ -45,16 +48,18 @@
                     android:host="oauth"
                     android:scheme="kakaoee925720d00642f3e5c08066b8883de5" />
             </intent-filter>
-        </activity>
-        <!--        <meta-data-->
-        <!--            android:name="com.kakao.sdk.AppKey"-->
-        <!--            android:value="ee925720d00642f3e5c08066b8883de5" />-->
-        <activity android:name=".activity.UserSettingActivity"
-            android:exported="false"/>
-        <activity android:name=".activity.FoodAnalysisActivity"
-            android:exported="false"/>
-        <activity android:name=".activity.FoodDetailInfoActivity"
-            android:exported="false"/>
+        </activity> <!-- <meta-data -->
+        <!-- android:name="com.kakao.sdk.AppKey" -->
+        <!-- android:value="ee925720d00642f3e5c08066b8883de5" /> -->
+        <activity
+            android:name=".activity.UserSettingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.FoodAnalysisActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.FoodDetailInfoActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
