테이블 수정, 화면 업데이트.. 근데 개 느림 ( 수정 필요..)

--- a/AIFoodApp/app/build.gradle
+++ b/AIFoodApp/app/build.gradle
@@ -68,7 +68,7 @@ dependencies {
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
-    implementation 'com.squareup.retrofit2:converter-gson'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     //gson은 json을 자바 클래스로 바꿔
 
 }
