카메라로 이미지 촬영하기 및 갤러리에서 이미지 가져오기 기능

--- a/AIFoodApp/app/src/main/AndroidManifest.xml
+++ b/AIFoodApp/app/src/main/AndroidManifest.xml
@@ -4,7 +4,11 @@
     <!-- 인터넷 사용 권한 설정 (카카오 서버와 통신하기 위하여) -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 스마트폰 메모리 접근 -->
+
+    <!-- 외부 저장소 접근 권한 설정 (카메라와 갤러리 이용) -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
     <application
         android:name=".KakaoApplication"
@@ -57,6 +61,17 @@
         <activity
             android:name=".activity.FoodDetailInfoActivity"
             android:exported="false" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.android.aifoodapp"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/photo_file_path" />
+        </provider>
+
     </application>
 
 </manifest>
