--- a/AIFoodApp/app/build.gradle
+++ b/AIFoodApp/app/build.gradle
@@ -71,4 +71,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     //gson은 json을 자바 클래스로 바꿔
 
+    //camera & gallery 사용
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.15'
+
 }
