식단 추천하기의 쇼핑과 레시피 기능 : 모바일 url로 연결되도록 설정

--- a/AIFoodApp/app/src/main/AndroidManifest.xml
+++ b/AIFoodApp/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         android:theme="@style/Theme.AIFoodApp"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".activity.SelectMarketActivity"
+            android:exported="false"
+            android:theme="@style/Transparent" />
+        <activity
             android:name=".activity.RecommendFoodActivity"
             android:exported="false" />
         <activity
