이미지 출력 오류 수정(1)

--- a/AIFoodApp/app/src/main/AndroidManifest.xml
+++ b/AIFoodApp/app/src/main/AndroidManifest.xml
@@ -74,7 +74,7 @@
             android:exported="false" />
         <activity
             android:name=".activity.FoodDetailInfoActivity"
-            android:exported="false" />
+            android:exported="true" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
