사진 접근 권한 허용 문제 수정

--- a/AIFoodApp/app/src/main/AndroidManifest.xml
+++ b/AIFoodApp/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_replace_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AIFoodApp"
+        android:requestLegacyExternalStorage="true"
         android:usesCleartextTraffic="true">
         <activity
             android:name=".activity.SelectMarketActivity"
