포그라운드 서비스 구현 (걸음수 저장)

--- a/AIFoodApp/app/build.gradle
+++ b/AIFoodApp/app/build.gradle
@@ -87,4 +87,8 @@ dependencies {
 
     //speech bubble
     implementation 'com.github.MasayukiSuda:BubbleLayout:v1.2.2'
+
+    //https://developer.android.com/guide/health-and-fitness/health-connect/get-started
+    //health-connect (아직 알파버전)
+    implementation 'androidx.health:health-connect-client:1.0.0-alpha01'
 }
