걸음수 증가시 알람음 없애기 및 안드로이드 버전 - pending intent 오류 해결

--- a/AIFoodApp/app/build.gradle
+++ b/AIFoodApp/app/build.gradle
@@ -91,4 +91,5 @@ dependencies {
     //https://developer.android.com/guide/health-and-fitness/health-connect/get-started
     //health-connect (아직 알파버전)
     implementation 'androidx.health:health-connect-client:1.0.0-alpha01'
+    implementation 'androidx.work:work-runtime-ktx:2.7.0'
 }
